--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-family: "Open Sans", sans-serif;
+
   /* overflow-x: hidden; */
+}
+
+.linkstyle {
+  text-decoration: none;
+  color: black;
+  transition: all 0.5s ease;
+}
+
+.active {
+  text-decoration: none;
+  color: #37b2b2;
 }
